--- a/deno.jsonc
+++ b/deno.jsonc
@@ -17,8 +17,7 @@
     "eslint-plugin-obsidianmd": "npm:eslint-plugin-obsidianmd@^0.1.4",
     "globals": "npm:globals@^16.3.0",
     "obsidian": "npm:obsidian@1.8.7",
-    "tsdav": "npm:tsdav@^2.1.6",
-    "vcard-parser": "npm:vcard-parser@^1.0.0"
+    "tsdav": "npm:tsdav@^2.1.6"
   },
   "nodeModulesDir": "auto",
   "tasks": {
