--- a/deno.jsonc
+++ b/deno.jsonc
@@ -12,7 +12,8 @@
   "imports": {
     "@david/dax": "jsr:@david/dax@0.43.2",
     "@std/semver": "jsr:@std/semver@^1.0.5",
-    "zweieuro/davparse": "jsr:@zweieuro/davparse@^0.1.0",
+    "@zweieuro/davparse": "jsr:@zweieuro/davparse@^0.1.0",
+    "buffer": "npm:buffer@^6.0.3",
     "esbuild": "npm:esbuild@0.25.5",
     "eslint": "npm:eslint@^9.34.0",
     "eslint-plugin-obsidianmd": "npm:eslint-plugin-obsidianmd@^0.1.4",
