--- a/deno.jsonc
+++ b/deno.jsonc
@@ -11,6 +11,7 @@
   ],
   "imports": {
     "@david/dax": "jsr:@david/dax@0.43.2",
+    "@deno/esbuild-plugin": "jsr:@deno/esbuild-plugin@^1.2.1",
     "@std/semver": "jsr:@std/semver@^1.0.5",
     "@zweieuro/davparse": "jsr:@zweieuro/davparse@^0.1.0",
     "buffer": "npm:buffer@^6.0.3",
