--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "DAV contact card sync",
   "version": "1.0.0",
   "minAppVersion": "1.7.2",
-  "description": "Card sync plugin to sync carddav compatible contact lists",
+  "description": "Card sync plugin to sync carddav compatible contact lists.",
   "author": "ZweiEuro",
   "authorUrl": "NoUrl",
   "fundingUrl": {
